--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
       <a href="#" onclick="fullscreen();">Fullscreen</a>
     </div>
 
-    <script src="main.js" charset="utf-8"  type="application/javascript"></script>
+    <script onload="init()" src="main.js" charset="utf-8"  type="application/javascript"></script>
   </body>
 </html>
